--- a/main.html
+++ b/main.html
@@ -3,32 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Responsive NavBar</title>
+  <title>Bootstrap NavBar Example</title>
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <!-- Bootstrap JS (optional for toggler functionality) -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-  <style>
-    /* Custom CSS for NavBar */
-    .navbar-brand {
-      font-weight: bold;
-    }
-  </style>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" href="#">Your Brand</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="bootcampsDropdown" role="button" data-toggle="dropdown"
-           aria-haspopup="true" aria-expanded="false">Bootcamps</a>
+        <a class="nav-link dropdown-toggle" href="#" id="bootcampsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Bootcamps</a>
         <div class="dropdown-menu" aria-labelledby="bootcampsDropdown">
           <a class="dropdown-item" href="#">Popular Bootcamps</a>
           <a class="dropdown-item" href="#">Bootcamp Developers</a>
@@ -37,8 +26,7 @@
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="codingDropdown" role="button" data-toggle="dropdown"
-           aria-haspopup="true" aria-expanded="false">Coding</a>
+        <a class="nav-link dropdown-toggle" href="#" id="codingDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Coding</a>
         <div class="dropdown-menu" aria-labelledby="codingDropdown">
           <a class="dropdown-item" href="#">Coding tools</a>
           <a class="dropdown-item" href="#">HTML</a>
@@ -51,9 +39,8 @@
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="careerDropdown" role="button" data-toggle="dropdown"
-           aria-haspopup="true" aria-expanded="false">Career Resources</a>
-        <div class="dropdown-menu" aria-labelledby="careerDropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="careerResourcesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Career Resources</a>
+        <div class="dropdown-menu" aria-labelledby="careerResourcesDropdown">
           <a class="dropdown-item" href="#">Career Advice</a>
           <a class="dropdown-item" href="#">Interviews</a>
           <a class="dropdown-item" href="#">Tech Cities</a>
@@ -61,9 +48,8 @@
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="techDropdown" role="button" data-toggle="dropdown"
-           aria-haspopup="true" aria-expanded="false">Tech Fields</a>
-        <div class="dropdown-menu" aria-labelledby="techDropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="techFieldsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tech Fields</a>
+        <div class="dropdown-menu" aria-labelledby="techFieldsDropdown">
           <a class="dropdown-item" href="#">Web Design</a>
           <a class="dropdown-item" href="#">Web Development</a>
           <a class="dropdown-item" href="#">Software Engineering</a>
@@ -80,6 +66,11 @@
     </form>
   </div>
 </nav>
+
+<!-- Bootstrap JS and dependencies (jQuery and Popper.js) -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
 </html>
